[package]
name = "simple-blockchain-rs"
version = "0.1.0"
edition = "2021"
authors = ["Utsav Balar"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"
chrono = "0.4.0"
serde = { version = "1.0.142", features = ["derive"] }

[dependencies.secp256k1] 
version = "0.24.0"
features = ["rand-std", "serde"]